include_directories(${ENGINE_INCLUDE_DIR} .)

set(TEST_EXT_LIBS PEUtils)
file(GLOB_RECURSE PHYS_COLLISION_ALGO ${ENGINE_INCLUDE_DIR}/phys/collision/collision_algorithm/*.cpp)

add_subdirectory(intf/viewer)
add_subdirectory(phys/object/rigidbody)
add_subdirectory(phys/shape/box_shape)
add_subdirectory(phys/shape/convex_mesh_shape)
add_subdirectory(phys/collision/broad_phase)
add_subdirectory(phys/collision/narrow_phase)
add_subdirectory(phys/collision/box_box_collision)
add_subdirectory(phys/constraint/friction_contact_constraint)
add_subdirectory(phys/constraint/sequential_impulse_solver)
add_subdirectory(intf/world)
add_subdirectory(phys/fracture)
add_subdirectory(phys/collision/mesh_mesh_collision)
add_subdirectory(utils/thread_pool)
add_subdirectory(phys/shape/cylinder_shape)
add_subdirectory(utils/pool)
add_subdirectory(phys/vehicle)
add_subdirectory(phys/raycast/raycast_box)
add_subdirectory(phys/raycast/raycast_sphere)
