include_directories(${ENGINE_INCLUDE_DIR} .)

file(GLOB_RECURSE PHYS_COLLISION_ALGO ${ENGINE_INCLUDE_DIR}/rigid/collision/collision_algorithm/*.cpp)

add_subdirectory(intf/viewer)
add_subdirectory(rigid/object/rigidbody)
add_subdirectory(rigid/shape/box_shape)
add_subdirectory(rigid/shape/convex_mesh_shape)
add_subdirectory(rigid/collision/broad_phase)
add_subdirectory(rigid/collision/narrow_phase)
add_subdirectory(rigid/collision/box_box_collision)
add_subdirectory(rigid/constraint/friction_contact_constraint)
add_subdirectory(rigid/constraint/sequential_impulse_solver)
add_subdirectory(intf/world)
add_subdirectory(rigid/fracture)
add_subdirectory(rigid/collision/mesh_mesh_collision)
add_subdirectory(utils/thread_pool)
add_subdirectory(rigid/shape/cylinder_shape)
add_subdirectory(utils/pool)
add_subdirectory(rigid/vehicle)
add_subdirectory(rigid/raycast/raycast_box)
add_subdirectory(rigid/raycast/raycast_sphere)
add_subdirectory(rigid/raycast/raycast_cylinder)
add_subdirectory(rigid/raycast/raycast_mesh)
add_subdirectory(utils/hash_vector)
add_subdirectory(utils/bvh)
add_subdirectory(rigid/constraint/primal_dual_solver)
